v0.0.4.10:
- Movies:
	- Changed the IMDB id column into MetaDB Link
- TV-Shows:
	- Added column MetaDB Link to export level 4

v0.0.4.9:
- Movies:
	- Changed the IMDB id into the url towards IMDB
	- Part Size (Level 5) will now be shown in GB not Bytes
		- Huge thanks to rabelux for this 

v0.0.4.8:
- TV-Shows:
	- Added collections to level 2
	- Added Locked Fields to level 2

v0.0.4.7:
-	Movies:
	- Added thumbs and art uri to level 3
- TV-Shows:
	- Added thumbs uri to level 2

v0.0.4.6:
-	Movies:
	- IMDB number didn't work :-(
		-	Fixed by moving it to level 3

v0.0.4.5:
-	Movies:
	- Added special level 1

v0.0.4.4:
- General:
	- Added a general preference, called "TimeOut", that might help with a slow NAS

v0.0.4.3:
- General:
	- Fixed an issue, where Plex2CSV would not respond, if not used for a long time

v0.0.4.2:
- General:
	- So now all export types has been migrated to the new way, meaning that if you stumple on a field I missed, then it'll be very easy for me to add it :-) 
- Photos:
	- Yep...Photos can now be exported as well :-)
	-	Total amount of pictures to be exported can however not be calculated, since pictures can be nested in multiple levels of folders
		And here's the levels:
		-	Level 1:
			- Photo ID
			-	Title
			-	Summary
			-	Originally Available At
			-	Added At
			-	Updated At
		-	Level 2:
			-	Media Width
			-	Media Height
			-	Media Aspect Ratio
			-	Media Container
			-	Media Title
		-	Level 3:
			-	Part File
			-	Part Size
			-	Part Container
			-	Part Orientation
- Movies:
	- Added the following Subtitle stream info to level 6:
		- Subtitle Stream Codec
		- Subtitle Stream Index
		- Subtitle Stream Language
		- Subtitle Stream Language Code
		- Subtitle Stream Codec ID
		- Subtitle Stream Format
		- Subtitle Stream Title
		- Subtitle Stream Selected
	- Added the following Video stream info to level 6:
		- Video Stream Default
		- Video Stream Index
		- Video Stream Duration
		- Video Stream Level
		- Video Stream Title
- TV Shows