@@ -13,8 +13,9 @@ PREFIX = '/applications/Plex2csv'
 APPGUID = '7608cf36-742b-11e4-8b39-00089bd210b2'
 PLAYLIST = 'playlist.png'
 
-# How many items we ask for each time, when accessing a section
-CONTAINERSIZEMOVIES = 20
-CONTAINERSIZETV = 5
+# How many items we ask for each time, when accessing a section or Show
+CONTAINERSIZEMOVIES = 30
+CONTAINERSIZETV = 10
+CONTAINERSIZEEPISODES = 30
 CONTAINERSIZEAUDIO = 10
 CONTAINERSIZEPHOTO = 20
